tests/fixtures/invalid/array_compound_literal_too_many_initializers.c
int main(void) {
    int *values = (int[2]){1, 2, 3};
    return values[0];
}
